--- a/themes/twitter/layouts/default.html
+++ b/themes/twitter/layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{{ page.title }} - When GO meets Raspberry Pi</title>
+    <title>{{ page.title }} - When Go meets Raspberry Pi</title>
   {{# page.description }}
     <meta name="description" content="{{ . }}">
   {{/ page.description }}
