updated sidebar padding

--- a/themes/twitter/layouts/default.html
+++ b/themes/twitter/layouts/default.html
@@ -14,7 +14,7 @@
     <![endif]-->
 
     <!-- Le styles -->
-    {{{ assets }}} 
+    {{{ assets }}}
 
   <link rel="shortcut icon" href="http://tp3.sinaimg.cn/1808008002/50/5649301600/1">
 
@@ -47,9 +47,7 @@
       <div class="content">
         {{{ content }}}
 
-
-
-        <center>    
+        <center>
         <script type="text/javascript"><!--
         google_ad_client = "ca-pub-5109060569865704";
         /* Hugo&#39;s blog 728x90, created 1/6/09 */
@@ -58,20 +56,18 @@
         google_ad_height = 90;
         //-->
         </script>
-        <script type="text/javascript"
-        src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+        <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
         </script>
         </center>
 
       </div>
 
       <footer>
-        <p>&copy; <a href="http://weibo.com/hugozhu">{{ site.author.name }}</a> 2013 
-          Powered by <a href="http://www.raspberrypi.org" target="_blank"><img src="http://a0.twimg.com/profile_images/1590336143/Raspi-PGB001_normal.png"/> Raspberry Pi</a> 
+        <p>&copy; <a href="http://weibo.com/hugozhu">{{ site.author.name }}</a> 2013
+          Powered by <a href="http://www.raspberrypi.org" target="_blank"><img src="http://a0.twimg.com/profile_images/1590336143/Raspi-PGB001_normal.png"/> Raspberry Pi</a>
           with help from <a href="http://github.com/wendal/gor" target="_blank" title="Gor -- Fast Blog">Gor</a>
           and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
-		  and Idea from <a href="http://ruhoh.com" target="_blank" title="The Definitive Technical Blogging Framework">ruhoh</a>
-        </p>
+		  and Idea from <a href="http://ruhoh.com" target="_blank" title="The Definitive Technical Blogging Framework">ruhoh</a></p>
       </footer>
 
     </div> <!-- /container -->
