--- a/themes/twitter/layouts/post.html
+++ b/themes/twitter/layouts/post.html
@@ -33,8 +33,8 @@ layout : default
     <hr>
     {{{ comments }}}
   </div>
-  
-  
+
+  <div style="padding-left:660px">
  <script type="text/javascript" charset="utf-8">
 (function(){
   var _w = 86 , _h = 50;
@@ -74,5 +74,7 @@ layout : default
       {{> tags_list }}
     {{/ page.tags?to_tags }}
     </ul>
+  </div>
+
   </div>
 </div>
