--- a/themes/twitter/layouts/post.html
+++ b/themes/twitter/layouts/post.html
@@ -31,6 +31,18 @@ layout : default
       </ul>
     </div>
     <hr/>
+    <script type="text/javascript"><!--
+    google_ad_client = "ca-pub-5109060569865704";
+    /* 文章正文下方 */
+    google_ad_slot = "7038459385";
+    google_ad_width = 468;
+    google_ad_height = 15;
+    //-->
+    </script>
+    <script type="text/javascript"
+    src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+    </script>    
+    <hr/>
     {{{ comments }}}
   </div>
 
