--- a/themes/twitter/layouts/post.html
+++ b/themes/twitter/layouts/post.html
@@ -86,6 +86,19 @@ layout : default
         {{> tags_list }}
       {{/ page.tags?to_tags }}
       </ul>
+
+<script type="text/javascript"><!--
+google_ad_client = "ca-pub-5109060569865704";
+/* myalert.info */
+google_ad_slot = "8432858182";
+google_ad_width = 300;
+google_ad_height = 250;
+//-->
+</script>
+<script type="text/javascript"
+src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+      
     </div>
   
 </div>
