added fork me on github banner

--- a/themes/twitter/layouts/default.html
+++ b/themes/twitter/layouts/default.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ page.title }} - When Go meets Raspberry Pi</title>
   {{# page.description }}
     <meta name="description" content="{{ . }}">
@@ -28,6 +29,8 @@
   </head>
 
   <body>
+  
+<a href="https://github.com/hugozhu"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
 
     <div class="navbar">
       <div class="navbar-inner">
@@ -88,7 +91,6 @@
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 </script>
-
 
   </body>
 </html>
