--- a/themes/twitter/layouts/post.html
+++ b/themes/twitter/layouts/post.html
@@ -87,27 +87,9 @@ layout : default
       {{/ page.tags?to_tags }}
       </ul>
 
-<script type="text/javascript"> 
-alimama_pid="mm_12926928_3484851_11373345"; 
-alimama_width=300; 
-alimama_height=250; 
-</script> 
-<script src="http://a.alimama.cn/inf.js" type="text/javascript"> 
-</script>
-
-<br/>
-
-<script type="text/javascript"><!--
-google_ad_client = "ca-pub-5109060569865704";
-/* myalert.info */
-google_ad_slot = "8432858182";
-google_ad_width = 300;
-google_ad_height = 250;
-//-->
-</script>
-<script type="text/javascript"
-src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
+{{#page}}
+    {{>right_ads}}
+{{/page}}
       
     </div>
   
