--- a/themes/twitter/layouts/default.html
+++ b/themes/twitter/layouts/default.html
@@ -118,5 +118,7 @@ win.alimamatk_onload.push(o);
 })(window,document);
 </script>
 
+<script src="http://s16.cnzz.com/stat.php?id=5144522&web_id=5144522&online=2" language="JavaScript"></script>
+
   </body>
 </html>
