--- a/themes/twitter/layouts/default.html
+++ b/themes/twitter/layouts/default.html
@@ -79,6 +79,8 @@
           and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
 		  and Idea from <a href="http://ruhoh.com" target="_blank" title="The Definitive Technical Blogging Framework">ruhoh</a>
        <!--# echo var="remote_addr" default="no" -->
+       <br/>
+<script src="http://s16.cnzz.com/stat.php?id=5144522&web_id=5144522&online=1&show=line" language="JavaScript"></script>       
       </p>
       </footer>
 
@@ -117,8 +119,6 @@ win.alimamatk_onload = win.alimamatk_onload || [];
 win.alimamatk_onload.push(o);
 })(window,document);
 </script>
-
-<script src="http://s16.cnzz.com/stat.php?id=5144522&web_id=5144522&online=2" language="JavaScript"></script>
 
   </body>
 </html>
