--- a/themes/twitter/layouts/default.html
+++ b/themes/twitter/layouts/default.html
@@ -119,6 +119,6 @@ win.alimamatk_onload = win.alimamatk_onload || [];
 win.alimamatk_onload.push(o);
 })(window,document);
 </script>
-
+   <img src="http://app.myalert.info/b.gif"/>
   </body>
 </html>
