--- a/themes/twitter/layouts/default.html
+++ b/themes/twitter/layouts/default.html
@@ -58,15 +58,12 @@
         <hr/>
 
         <center>
-        <script type="text/javascript"><!--
-        google_ad_client = "ca-pub-5109060569865704";
-        /* Hugo&#39;s blog 728x90, created 1/6/09 */
-        google_ad_slot = "1925751418";
-        google_ad_width = 728;
-        google_ad_height = 90;
-        //-->
-        </script>
-        <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+        <script type="text/javascript"> 
+        alimama_pid="mm_12926928_3484851_11458495"; 
+        alimama_width=950; 
+        alimama_height=90; 
+        </script> 
+        <script src="http://a.alimama.cn/inf.js" type="text/javascript"> 
         </script>
         </center>
 
