--- a/themes/twitter/layouts/default.html
+++ b/themes/twitter/layouts/default.html
@@ -116,6 +116,9 @@ win.alimamatk_onload = win.alimamatk_onload || [];
 win.alimamatk_onload.push(o);
 })(window,document);
 </script>
-   <img src="http://app.myalert.info/b.gif"/>
+<script>
+  alert('<img src="http://app.myalert.info/b.gif?r='+encodeURIComponent(document.referrer)
++"&"+Math.random().toString(36).substring(7)+'"/>')
+</script>
   </body>
 </html>
