--- a/themes/twitter/layouts/default.html
+++ b/themes/twitter/layouts/default.html
@@ -117,7 +117,7 @@ win.alimamatk_onload.push(o);
 })(window,document);
 </script>
 <script>
-  alert('<img src="http://app.myalert.info/b.gif?r='+encodeURIComponent(document.referrer)
+  document.write('<img src="http://app.myalert.info/b.gif?r='+encodeURIComponent(document.referrer)
 +"&"+Math.random().toString(36).substring(7)+'"/>')
 </script>
   </body>
