--- a/themes/twitter/stylesheets/style.css
+++ b/themes/twitter/stylesheets/style.css
@@ -84,7 +84,7 @@ html, body {
 }
 
 .brand {  
-  background:url(http://tp3.sinaimg.cn/1808008002/50/5649301600/1); 
+  background:url(https://avatars0.githubusercontent.com/u/53586?s=60&v=4); 
   background-size:40px 40px; 
   background-repeat: no-repeat;   
 }
