--- a/themes/twitter/layouts/default.html
+++ b/themes/twitter/layouts/default.html
@@ -60,17 +60,13 @@
       </div>
 
       <footer>
-        <p>&copy; <a href="http://weibo.com/hugozhu">{{ site.author.name }}</a> 2021
+        <p>&copy; <a href="http://github.com/hugozhu">{{ site.author.name }}</a> 2022
           Powered by <a href="http://www.raspberrypi.org" target="_blank"><img src="http://retroburngames.com/bytrix/media/images/28_icon.jpg"/> Raspberry Pi</a>
           with help from <a href="http://github.com/wendal/gor" target="_blank" title="Gor -- Fast Blog">Gor</a>
           and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
 		  and Idea from <a href="http://ruhoh.com" target="_blank" title="The Definitive Technical Blogging Framework">ruhoh</a>
-       <!--# echo var="remote_addr" default="no" -->
-       <br/>
-<script src="http://s16.cnzz.com/stat.php?id=5144522&web_id=5144522&online=1&show=line" language="JavaScript"></script>       
-      </p>
+        </p>
       </footer>
-
     </div> <!-- /container -->
 
     {{{ google_prettify }}}
