--- a/themes/twitter/layouts/default.html
+++ b/themes/twitter/layouts/default.html
@@ -71,28 +71,26 @@
 
     {{{ google_prettify }}}
 
-<script type="text/javascript">
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-37261636-1']);
-  _gaq.push(['_setDomainName', 'myalert.info']);
-  _gaq.push(['_trackPageview']);
+	  
+	  
 
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-	
-	
-// Feature detects Navigation Timing API support.
-if (window.performance) {
-  // Gets the number of milliseconds since page load
-  // (and rounds the result since the value must be an integer).
-  var timeSincePageLoad = Math.round(performance.now());
-  // Sends the timing hit to Google Analytics.
-  ga('send', 'timing', 'JS Dependencies', 'load', timeSincePageLoad);
-}	
-</script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-37261636-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-37261636-1');
+	
+  // Feature detects Navigation Timing API support.
+  if (window.performance) {
+     // Gets the number of milliseconds since page load
+     // (and rounds the result since the value must be an integer).
+     var timeSincePageLoad = Math.round(performance.now());
+     // Sends the timing hit to Google Analytics.
+     ga('send', 'timing', 'JS Dependencies', 'load', timeSincePageLoad); 
+  }	
+</script>	  	  
 </body>
 </html>
