--- a/themes/twitter/layouts/default.html
+++ b/themes/twitter/layouts/default.html
@@ -85,12 +85,17 @@
 	
   // Feature detects Navigation Timing API support.
   if (window.performance) {
-     // Gets the number of milliseconds since page load
-     // (and rounds the result since the value must be an integer).
-     var timeSincePageLoad = Math.round(performance.now());
-     // Sends the timing hit to Google Analytics.
-     ga('send', 'timing', 'JS Dependencies', 'load', timeSincePageLoad); 
-  }	
+    // Gets the number of milliseconds since page load
+    // (and rounds the result since the value must be an integer).
+    var timeSincePageLoad = Math.round(performance.now());
+
+    // Sends the timing event to Google Analytics.
+    gtag('event', 'timing_complete', {
+      'name': 'load',
+      'value': timeSincePageLoad,
+      'event_category': 'JS Dependencies'
+    });
+  }
 </script>	  	  
 </body>
 </html>
