--- a/themes/twitter/layouts/default.html
+++ b/themes/twitter/layouts/default.html
@@ -72,16 +72,14 @@
     {{{ google_prettify }}}
 
 	  
-	  
-
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-37261636-1"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TGKSWHTY3B"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-37261636-1');
+  gtag('config', 'G-TGKSWHTY3B');
 	
   // Feature detects Navigation Timing API support.
   if (window.performance) {
@@ -95,7 +93,8 @@
       'value': timeSincePageLoad,
       'event_category': 'JS Dependencies'
     });
-  }
-</script>	  	  
+  }	
+</script>	  
+ 
 </body>
 </html>
