--- a/themes/twitter/layouts/default.html
+++ b/themes/twitter/layouts/default.html
@@ -97,6 +97,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       'event_category': 'JS Dependencies'
     });
   }	
+	
+	
+gtag('event', 'test_event_name', {
+  'screen_name' : document.title,
+  'page_title' : document.title,
+  'page_location': location.href
+});
+
+gtag('event', 'screen_view', {
+  'screen_name' : document.title,
+  'test_param' : location.href
+});
+	
 </script>	  
  
 </body>
