--- a/themes/twitter/layouts/default.html
+++ b/themes/twitter/layouts/default.html
@@ -99,15 +99,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   }	
 	
 	
-gtag('event', 'test_event_name', {
-  'screen_name' : document.title,
-  'page_title' : document.title,
-  'page_location': location.href
+gtag('event', 'hho_login_view', {
+  'click' : "tab_signin",
 });
 
-gtag('event', 'screen_view', {
-  'screen_name' : document.title,
-  'test_param' : location.href
+gtag('event', 'hho_login_view', {
+  'click' : "ink_bottom_service",
+});
+
+gtag('event', 'hho_login_view', {
+  'input_email' : location.href,
 });
 	
 </script>	  
