--- a/themes/twitter/layouts/default.html
+++ b/themes/twitter/layouts/default.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <title>{{ page.title }} - When Go meets Raspberry Pi</title>
-  {{# page.description }}
-    <meta name="description" content="{{ . }} 树莓派">
-  {{/ page.description }}
+    {{# page.description }}
+      <meta name="description" content="{{ . }} 树莓派">
+    {{/ page.description }}
     <meta name="author" content="{{ site.author.name }}">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
@@ -24,7 +25,23 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-W88HDMN');</script>
 <!-- End Google Tag Manager -->
-	  
+
+
+  <style>
+  /* 默认样式适用于所有设备 */
+
+  /* 媒体查询：小于768px宽度的设备（通常是手机） */
+  @media (max-width: 767px) {
+    .navbar .container{ 
+      width:600px;
+    }
+  }
+
+  /* 媒体查询：768px到992px宽度的设备（通常是平板电脑） */
+  @media (min-width: 768px) and (max-width: 992px) {
+  }
+
+  </style>	  
   </head>
 
   <body>
@@ -46,7 +63,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <li style="padding-left:10px">
               <form class="navbar-search pull-right" method="GET" action="https://www.google.com/search">
                 <input type="text" name="as_q" class="search-query" placeholder=" Search... ">
-                <input type="hidden" name="as_sitesearch" value="hugozhu.myalert.info">
+                <input type="hidden" name="as_sitesearch" value="blog.hugozhu.site">
               </form>               
             </li>
           </ul>
