--- a/themes/twitter/layouts/default.html
+++ b/themes/twitter/layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <title>{{ page.title }} - When Go meets Raspberry Pi</title>
+    <title>{{ page.title }} - Raspberry Pi, R4S, StreamDeck</title>
     {{# page.description }}
       <meta name="description" content="{{ . }} 树莓派">
     {{/ page.description }}
